fix seeding -> static seed files